--- a/index_minus.html
+++ b/index_minus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width;, initial-scale=1.0" />
   <title>Топ 5 мобильных игр!!!</title>
  <style>
-   @media all and (color) 
+   @media screen
    div { 
     background: url(images/hand.png) repeat-y #fc0; 
    }
