--- a/index_minus.html
+++ b/index_minus.html
@@ -7,7 +7,8 @@
  <style>
    @media screen
    div { 
-    background: url(images/hand.png) repeat-y #fc0; 
+    background: url(images/hand.png); 
+     background-color:#fc0;
    }
   </style>
   <style>
