--- a/index_minus.html
+++ b/index_minus.html
@@ -7,8 +7,16 @@
  <style>
    @media screen
    div { 
-    background: url(images/hand.png); 
-     background-color:#fc0;
+    background: url(images/hand.png) repeat-y #FFFF00; 
+   }
+    @media screen and (min-device-width: 1600px) {
+    div {width: 1500px;}
+   }
+   @media screen and (device-width: 1280px) {
+    div {width: 1100px;}
+   }
+   @media screen and (device-width: 1024px) {
+    div {width: 980px;}
    }
   </style>
   <style>
