--- a/index_minus.html
+++ b/index_minus.html
@@ -6,7 +6,7 @@
   <title>Топ 5 мобильных игр!!!</title>
  <style>
    div { 
-    background: url(images/hand.png) repeat-y #FFFF00; 
+    background: url(images/hand.png) repeat-x #FFFF00; 
    }
   </style>
   <style>
