--- a/index_minus.html
+++ b/index_minus.html
@@ -17,6 +17,10 @@
     </head>
     <body>
       <div style="margin: 0px 400px">
+      <h1 style="color: white">GWC</h1>
+      <h2 style="color: white">Game-World-Center</h2>
+      </div>
+      <div style="margin: 0px 400px">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
