--- a/index_minus.html
+++ b/index_minus.html
@@ -16,10 +16,8 @@
   </style>
     </head>
     <body>
-      <div style="margin: 0px 400px">
-      <h1 style="color: white">GWC</h1>
-      <h2 style="color: white">Game-World-Center</h2>
-      </div>
+      <h1 style="color: white; margin: 0px 400px;">GWC</h1>
+      <h2 style="color: white; margin: 0px 400px;">Game-World-Center</h2>
       <div style="margin: 0px 400px">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
