--- a/index_minus.html
+++ b/index_minus.html
@@ -16,9 +16,11 @@
   </style>
     </head>
     <body>
-      <h1 style="color: white; margin: 0px 400px;">GWC</h1>
-      <h2 style="color: white; margin: 0px 400px;">Game-World-Center</h2>
-      <div style="margin: 0px 400px">
+      <div style="margin: 0px 400px;">
+      <h1 style="color: violet; margin: 0px 120px;">GWC</h1>
+      <h2 style="color: violet; margin: 0px 120px;">Game-World-Center</h2>
+      </div>
+      <div style="margin: 0px 400px;">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
