--- a/index_minus.html
+++ b/index_minus.html
@@ -17,8 +17,8 @@
     </head>
     <body>
       <div style="margin: 0px 400px;">
-      <h1 style="color: dark-violet; margin: 0px 120px;">GWC</h1>
-      <h2 style="color: dark-violet; margin: 0px 120px;">Game-World-Center</h2>
+      <h1 style="color: burgundy; margin: 0px 120px;">GWC</h1>
+      <h2 style="color: burgundy; margin: 0px 120px;">Game-World-Center</h2>
       </div>
       <div style="margin: 0px 400px;">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
