--- a/index_minus.html
+++ b/index_minus.html
@@ -16,8 +16,8 @@
   </style>
     </head>
     <body>
-      <h1 style="color: burgundy; margin: 0px 400px;">GWC</h1>
-        <h2 style="color: burgundy; margin: 0px 400px;">Game-World-Center</h2>
+      <h1 style="color: red; margin: 0px 520px;">GWC</h1>
+        <h2 style="color: red; margin: 0px 500px;">Game-World-Center</h2>
       <div style="margin: 0px 400px;">
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
