--- a/PUBG_Mobile_Lite.html
+++ b/PUBG_Mobile_Lite.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Brawl Stars</title>
+<title>PUBG Mobile Lite</title>
   <style type="text/css">
    div {
   background: url(images/hand.png) repeat-y #66CDAA;
@@ -24,7 +24,7 @@ href="https://play.google.com/store/apps/details?id=com.tencent.iglite">Скач
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/08/1008201809560480.jpg" width="150" height="150">
 <p>Как понятно из названия, это уменьшенная копия той же игры. Напряженный игровой процесс, широкий выбор оружия, возможность объединяться с друзьями — все это осталось. Главное отличие в том, что вас ждет не 100, а всего лишь 40 оппонентов на карте меньше масштаба.</p>
-<iframe width="727" height="409" src="https://www.youtube.com/embed/JmKeOa1KpKc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/JmKeOa1KpKc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </body>
 </html>
