--- a/index_minus.html
+++ b/index_minus.html
@@ -66,7 +66,15 @@ title="Stand off 2" width="150" height="150">
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
 <p><b>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</b></p>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe
+<iframe width="400" height="300" src="https://www.youtube.com/embed/bvJzC0kSdnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1 style="margin: 0px 120px;">Шестое место:</h1>
+        <h2 style="margin: 0px 120px;"><a
+                                          href="https://vlad-hunter6345.github.io/PUBG_Mobile_Lite.html">PUBG Mobile Lite</a><h2>
+  <img style="margin: 0px 120px;"
+     src="https://app-time.ru/uploads/games/cover/2018/08/1008201809560480.jpg"
+       aling="left">
+          <p><b>Как понятно из названия, это уменьшенная копия той же игры. Напряженный игровой процесс, широкий выбор оружия, возможность объединяться с друзьями — все это осталось. Главное отличие в том, что вас ждет не 100, а всего лишь 40 оппонентов на карте меньше масштаба.</b></p>
+    <iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/JmKeOa1KpKc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
   </div>
   </body>
         </html>
