--- a/index_minus.html
+++ b/index_minus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Топ 6 мобильных игр!!!</title>
+  <title>Топ 7 мобильных игр!!!</title>
  <style>
    div { 
     background: url(images/hand.png) repeat-x #FFFF00; 
@@ -75,7 +75,17 @@ src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width
      src="https://app-time.ru/uploads/games/cover/2018/08/1008201809560480.jpg"
        aling="left">
           <p><b>Как понятно из названия, это уменьшенная копия той же игры. Напряженный игровой процесс, широкий выбор оружия, возможность объединяться с друзьями — все это осталось. Главное отличие в том, что вас ждет не 100, а всего лишь 40 оппонентов на карте меньше масштаба.</b></p>
-    <iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/JmKeOa1KpKc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+    <iframe style="margin: 0px 120px;" width="400" height="300" src="https://www.youtube.com/embed/JmKeOa1KpKc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+          <h1 style="margin: 0px 120px;">Седьмое :</h1>
+          <h2 style="margin: 0px 120px;"><a
+                                            href="https://vlad-hunter6345.github.io/Shadow_Fight_2.html">Shadow Fight 2</a></h2>
+  <img style="margin: 0px 120px;"
+       src="https://app-time.ru/uploads/games/cover/2015/10/09102015001913.jpg"
+       aling="left">
+  <p><b>Shadow Fight 2 – это полноценный файтинг, еще и с ролевой составляющей. Злых ниндзя и самураев нужно убивать серией приемов и обычных ударов. Есть даже целый список эффективных комбинаций, которые не так уж и просто воплотить в жизнь. Прыжки, подкаты и множество красивых комбинаций с оружием.</b></p>
+<iframe style="margin: 0px 120px;"  width="400" height="300" src="https://www.youtube.com/embed/juzvcUWHBTg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+       
   </div>
   </body>
         </html>
