--- a/index_minus.html
+++ b/index_minus.html
@@ -14,6 +14,11 @@
     background-attachment: fixed; 
    }
   </style>
+  <style>
+    header {
+        height: 60px;
+  margin-bottom: 5px;
+  background-color:#000000;
     </head>
     <body>
       <img style="margin: 0px 500px;"
