--- a/index_minus.html
+++ b/index_minus.html
@@ -19,6 +19,8 @@
         height: 60px;
   margin-bottom: 5px;
   background-color:#000000;
+    }
+  </style>
     </head>
       <header>
        <img style="margin: 0px 500px;"
