--- a/drawning.html
+++ b/drawning.html
@@ -12,19 +12,25 @@
    a:hover {
     color: red
 }
+ <style>
 a {
     text-decoration: none;;
 }
+    </style>
+    <style>
 header {
     height: 60px;
     margin-bottom: 5px;
     background-color: #000000;
 }
+    </style>
+    <style>
 body {
     background: url(https://files.adme.ru/files/news/part_73/738010/7571560-1280px-Van_Gogh_-_Starry_Night_-_Google_Art_Project-650-26b294de5e-1484578499.jpg);
     background-attachment: fixed; 
     font-family: 'Big Shoulders Text', cursive;
-    
+    </style>
+    <style>
 }
 outer {
     display: table;
@@ -34,6 +40,8 @@ outer {
     border-color: black;
     border-width: 5px;
 }
+    </style>
+    <style>
 inner {
 display: inline-block;
 height: 800px;
