--- a/drawning.html
+++ b/drawning.html
@@ -25,14 +25,14 @@ header {
 }
     </style>
     <style>
-body {
+body
     background: url(https://files.adme.ru/files/news/part_73/738010/7571560-1280px-Van_Gogh_-_Starry_Night_-_Google_Art_Project-650-26b294de5e-1484578499.jpg);
     background-attachment: fixed; 
     font-family: 'Big Shoulders Text', cursive;
     </style>
     <style>
 }
-outer {
+div
     display: table;
     background: repeat-x #FFFF00;
     padding: 10px;
@@ -42,7 +42,7 @@ outer {
 }
     </style>
     <style>
-inner {
+div
 display: inline-block;
 height: 800px;
 width: 500px;
