--- a/Call_of_Duty_Mobile.html
+++ b/Call_of_Duty_Mobile.html
@@ -19,10 +19,10 @@
        <div style="margin: 0px 400px">
 <img style="margin: 0px 120px;"
 src="https://3dnews.ru/assets/external/illustrations/2019/10/04/995111/sm.sm.1552969571_COD.750.750.jpg" height="150">
-<h1 style="margin: 0px 120px;"><a
-href="https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter">Скачать Call of Duty Mobile Android</a></h1>
-<h1 style="margin: 0px 120px;"><a
-       href="https://apps.apple.com/ru/app/id1287282214">Скачать Call of Duty Mobile IOS</a></h1>
+<button><h1 style="margin: 0px 120px;"><a
+href="https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter">Скачать Call of Duty Mobile Android</a></h1></button>
+<button><h1 style="margin: 0px 120px;"><a
+       href="https://apps.apple.com/ru/app/id1287282214">Скачать Call of Duty Mobile IOS</a></h1></button>
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
 <p style="margin: 0px 120px;">Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</p>
