--- a/index_minus.html
+++ b/index_minus.html
@@ -72,7 +72,7 @@ title="Stand off 2" width="150" height="150">
 <iframe width="400" height="300" src="https://www.youtube.com/embed/OP2JjgXjiDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1 style="margin: 0px 120px;">Пятое место:</h1>
 <h2 style="margin: 0px 120px;"><a
-       href="https://vlad-hunter6345.github.io/Call_of_Duty_Mobile">Call of Duty Mobile</a></h2>
+       href="https://vlad-hunter6345.github.io/Call_of_Duty_Mobile.html">Call of Duty Mobile</a></h2>
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/12/1412201816183280.jpg" width="150" height="150">
 <p><b>Легендарный шутер от первого лица во вселенной Call of Duty! Эта игра вобрала в себя лучшее из всех частей серии: локации, главные персонажи и оружие. Головокружительная графика, порой неотличима по качеству от консольных игр, невероятный по своей атмосфере саундтрек и революционное сенсорное управление подарят вам неповторимые ощущения от игры.</b></p>
