--- a/Fortnite.html
+++ b/Fortnite.html
@@ -19,8 +19,8 @@
       <div style="margin: 0px 400px">
     <img style="margin: 0px 120px;"
     src="https://cdn2.unrealengine.com/Fortnite%2Flanding-pages%2Fseason-x%2Fheader%2F10BR_Announce_KeyArt_Social-1920x1080-c3c43cfe6a4cf97004f4cfcd5e38d843667168c1.jpg" height="150">
-   <h1 style="margin: 0px 120px;"><a
-   href="https://apps.apple.com/ru/app/id1261357853">Скачать Fortnite IOS</a></h1>
+  <button><h1 style="margin: 0px 120px;"><a
+                                            href="https://apps.apple.com/ru/app/id1261357853">Скачать Fortnite IOS</a></h1></button>
    <img style="margin: 0px 120px;"
    src="https://cdn-www.bluestacks.com/bs-images/300x300bb.png" width="150" height="150">
    <p style="margin: 0px 120px;">Fortnite – это представитель жанра королевской битвы, в котором 100 человек сбрасываются на карту и сражаются до тех пор, пока в живых не останется один (или отряд). 
