--- a/PUBG_Mobile_Lite.html
+++ b/PUBG_Mobile_Lite.html
@@ -19,8 +19,8 @@
   <div style="margin: 0px 400px;">
 <img style="margin: 0px 120px;"
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSzya4Ni-DzLUCUqemdoIooKFRZCVJsmHrxDbqoQdM7mr2ZuIj2" height="150">
-  <h1 style="margin: 0px 120px;"><a
-href="https://play.google.com/store/apps/details?id=com.tencent.iglite">Скачать PUBG Mobile Lite Android</a></h1>
+  <button><h1 style="margin: 0px 120px;"><a
+href="https://play.google.com/store/apps/details?id=com.tencent.iglite">Скачать PUBG Mobile Lite Android</a></h1></button>
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2018/08/1008201809560480.jpg" width="150" height="150">
 <p>Как понятно из названия, это уменьшенная копия той же игры. Напряженный игровой процесс, широкий выбор оружия, возможность объединяться с друзьями — все это осталось. Главное отличие в том, что вас ждет не 100, а всего лишь 40 оппонентов на карте меньше масштаба.</p>
