--- a/Shadow_Fight_2.html
+++ b/Shadow_Fight_2.html
@@ -19,10 +19,10 @@
   <div style="margin: 0px 400px;">
 <img style="margin: 0px 120px;"
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRZeUMIsaYH6NS4p4DQ5rhAv3PlHusKwFxMmTrHiFtaLGNs4cDN" height="150">
-  <h1 style="margin: 0px 120px;"><a
-href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight">Скачать Shadow Fight 2 Android</a></h1>
-<h1 style="margin: 0px 120px;"><a
-  href="https://apps.apple.com/ru/app/id696565994">Скачать Shadow Fight 2 IOS</a></h1>
+  <button><h1 style="margin: 0px 120px;"><a
+href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight">Скачать Shadow Fight 2 Android</a></h1></button>
+<button><h1 style="margin: 0px 120px;"><a
+                                          href="https://apps.apple.com/ru/app/id696565994">Скачать Shadow Fight 2 IOS</a></h1></button>
 <img style="margin: 0px 120px;"
 src="https://app-time.ru/uploads/games/cover/2015/10/09102015001913.jpg" width="150" height="150">
 <p>Shadow Fight 2 – это полноценный файтинг, еще и с ролевой составляющей. Злых ниндзя и самураев нужно убивать серией приемов и обычных ударов. Есть даже целый список эффективных комбинаций, которые не так уж и просто воплотить в жизнь. Прыжки, подкаты и множество красивых комбинаций с оружием.</p>
