--- a/Shadow_Fight_3.html
+++ b/Shadow_Fight_3.html
@@ -19,10 +19,10 @@
   <div style="margin: 0px 400px;">
     <img style="margin: 0px 120px;"
     src="https://i.ytimg.com/vi/kNdwTD_Tqiw/maxresdefault.jpg" height="150">
-    <h1 style="margin: 0px 120px;"><a
-    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Android</a></h1>
-<h1 style="margin: 0px 120px;"><a
-   href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1>
+    <button><h1 style="margin: 0px 120px;"><a
+    href="https://play.google.com/store/apps/details?id=com.nekki.shadowfight3">Скачать Shadow fight 3 Android</a></h1></button>
+<button><h1 style="margin: 0px 120px;"><a
+                                          href="https://apps.apple.com/ru/app/id964827011">Скачать Shadow fight 3 IOS</a></h1></button>
 <img style="margin: 0px 120px;"
 src="https://pbs.twimg.com/profile_images/1110191110553587714/i5uu1Mu2.png" width="150" height="150">
 <p style="margin: 0px 120px;">Shadow Fight 3 сохраняет свой неповторимый дух, но в то же время использует современные технологии, уже ставшие стандартом качества на рынке мобильных ААА-проектов. В Shadow Fight 3 вы увидите 3D-героев, локации и реалистичные анимации боя, созданные в анимационном ПО Cascadeur, собственной разработке компании Nekki.</p>
