UpdateStand_Off_2.html

--- a/Stand_Off_2.html
+++ b/Stand_Off_2.html
@@ -19,10 +19,10 @@
       <div style="margin: 0px 400px">
     <img style="margin: 0px 120px;"
     src="https://mobimg.b-cdn.net/androidgame_img/standoff_2/real/1_standoff_2.jpg" height="150">
-    <h1 style="margin: 0px 120px;"><a
-    href="https://play.google.com/store/apps/details?id=com.axlebolt.standoff2">Скачать Stand Off 2 Android</a></h1>
-<h1 style="margin: 0px 120px;"><a
-   href="https://apps.apple.com/ru/app/id1359706682">Скачать Stand Off 2 IOS</a></h1>
+    <button><h1 style="margin: 0px 120px;"><a
+    href="https://play.google.com/store/apps/details?id=com.axlebolt.standoff2">Скачать Stand Off 2 Android</a></h1></button>
+<button><h1 style="margin: 0px 120px;"><a
+                                          href="https://apps.apple.com/ru/app/id1359706682">Скачать Stand Off 2 IOS</a></h1></button>
 <img style="margin: 0px 120px;"
 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJT2FbZQuEyoR4IADdBgJMWHx5TgFqEbimZKMQU4M9BbrIaPxx&s" width="150" height="150">
 <p style="margin: 0px 120px;">Легендарный "Standoff" возвращается в виде динамичного экшн-шутера от первого лица! Вас ждут новые карты, новые виды вооружения, новые режимы, в которых команды террористов и отряды сил спецназначения сойдутся в битве не на жизнь, а насмерть.</p>
