--- a/index_minus.html
+++ b/index_minus.html
@@ -6,6 +6,7 @@
  <style>
    div { 
     background: url(images/hand.png) repeat-x #FFFF00; 
+     width: 30%;
    }
   </style>
 <style>
@@ -28,7 +29,7 @@
       <h2 style="color: green;"><b>Game-World-Cente</b></h2>
       </header>
     <body>
-      <div style="margin: 0px 400px;">
+      <div>
       <h1 style="margin: 0px 120px;">Первое место:<h1>
    <h2 style="margin: 0px 120px;"><a
          href="https://vlad-hunter6345.github.io/Brawl_Stars.html">Brawl Stars</a></h2>
