--- a/index_minus.html
+++ b/index_minus.html
@@ -6,7 +6,7 @@
  <style>
    div { 
     background: url(images/hand.png) repeat-x #FFFF00; 
-     width: 30%;
+     width: 25% 25%;
    }
   </style>
 <style>
